--- a/people.html
+++ b/people.html
@@ -31,7 +31,7 @@
           <div class="avatar-wrap">
             <div class="avatar">
               <img src="img/people/headshots/jake-greenfield.jpg"
-                   onerror="this.src='img/people/headshots/placeholder.svg'"
+                   onerror="this.src='img/people/headshots/jake-greenfield.jpg'"
                    alt="Headshot of Dr Jake L. Greenfield">
             </div>
             <div class="flag-badge"><img src="img/flags/gb.svg" alt="gb flag"></div>
@@ -61,7 +61,7 @@
           <div class="avatar-wrap">
             <div class="avatar">
               <img src="img/people/headshots/jiarong-wu.jpg"
-                   onerror="this.src='img/people/headshots/placeholder.svg'"
+                   onerror="this.src='img/people/headshots/jiarong-wu.jpg'"
                    alt="Headshot of Jiarong Wu">
             </div>
             <div class="flag-badge"><img src="img/flags/cn.svg" alt="cn flag" class="flag-left"></div>
