update of news etc

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 <section class="section bg-gray">
   <div class="container">
     <h2>Research</h2>
+    <p> Founded in April 2023, we are an interdisciplinary research group based in the <strong>Institute of Organic Chemistry</strong> at the <strong>University of Würzburg</strong>, Germany. Our research centers on three main themes.</p> 
     <div class="cards">
       <!-- Research Preview Card 1 -->
       <a href="research.html" class="card">
