--- a/research.html
+++ b/research.html
@@ -13,8 +13,7 @@
   <main class="section">
     <div class="container">
       <h1>Research Areas</h1>
-      <p><strong>Frustrated Helical Architectures.</strong> Helical structures are increasingly becoming commonplace in the modern technological world, attributed to their chiroptical and mechanical properties as well as their compact structures. Like a spring, helices can be reversibly deformed mechanically, affording emergent properties in the metastable state.</p>
-      <p>In the Greenfield Group, we are interested in self-assembled helices that can alter their properties under applied stimuli with a general outlook towards optoelectronics and energy storage materials.</p>
+      <p>Our research lies at the intersection of molecular photoswitches, dynamic covalent chemistry, and self-assembly. We design next-generation imine photoswitches with programmable properties, use light as a driving force to push systems far from equilibrium, and translate molecular-level control into the assembly of complex helical architectures. Together, these three themes—photoswitch design, out-of-equilibrium behaviour, and controlled assembly—form the foundation of our efforts to uncover new principles of function in responsive molecular systems.</p>
 
       <!-- === Research cards === -->
       <div class="cards">
