update of profiles etc

--- a/people.html
+++ b/people.html
@@ -54,6 +54,7 @@
             </ul>
           </div>
           <p><a href="mailto:Jake.Greenfield@uni-wuerzburg.de">Jake.Greenfield@uni-wuerzburg.de</a></p>
+          <a class="btn btn-gray" href="profile.html?person=jake-greenfield">View more</a>
         </article>
 
         <!-- Jiarong -->
@@ -84,6 +85,7 @@
             </ul>
           </div>
           <p><a href="mailto:Jiarong.Wu@uni-wuerzburg.de">Jiarong.Wu@uni-wuerzburg.de</a></p>
+          <a class="btn btn-gray" href="profile.html?person=jiarong-wu">View more</a>
         </article>
 
         <!-- Deepu -->
@@ -114,6 +116,7 @@
             </ul>
           </div>
           <p><a href="mailto:Deepu.George@uni-wuerzburg.de">Deepu.George@uni-wuerzburg.de </a></p>
+          <a class="btn btn-gray" href="profile.html?person=deepu-george">View more</a>
         </article>
       </div>
 
