update of profiles etc4

--- a/people.html
+++ b/people.html
@@ -120,6 +120,10 @@
         </article>
       </div>
 
+      <p style="margin:6px 0 20px">
+<a class="btn btn-gray" href="alumni.html">View previous group members</a>
+</p>
+
 
   <!-- PAGE CONTENT ENDS HERE -->
 
