update of profiles etc4

--- a/publications.html
+++ b/publications.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <div id="top"></div>
   <div id="site-header"></div>
 
   <main class="section">
@@ -37,10 +38,14 @@
 <section id="other-pubs" class="section bg-soft">
   <div class="container">
     <h2>Other publications &amp; biographical sketches</h2>
-    <p class="muted" style="margin:6px 0 16px">Biographical sketches, News &amp; Views, perspectives, and related items.</p>
+    <p class="muted" style="margin:6px 0 16px">Biographical sketches, News &amp; Views and other items.</p>
     <div id="otherList" class="publist" aria-live="polite"></div>
   </div>
 </section>
+
+<div class="container" style="text-align:center; margin: 24px 0;">
+  <a href="#top" class="btn btn-gray">Back to top</a>
+</div>
 
   <footer>
     <div class="container" style="display:flex;justify-content:space-between;gap:16px;flex-wrap:wrap">
