--- a/people.html
+++ b/people.html
@@ -20,7 +20,7 @@
 
       <figure style="margin:0 0 20px 0">
         <div class="group-photo">
-          <img src="img/people/group.jpg" onerror="this.src='img/people/group.svg'" alt="Greenfield Group photo">
+          <img src="img/people/grpaug20251.jpg" onerror="this.src='img/people/group.svg'" alt="Greenfield Group photo">
         </div>
         <figcaption class="muted">Replace with your real group photo at <code>img/people/group.jpg</code> (or .png).</figcaption>
       </figure>
