update of profiles etc4

--- a/people.html
+++ b/people.html
@@ -20,9 +20,8 @@
 
       <figure style="margin:0 0 20px 0">
         <div class="group-photo">
-          <img src="img/people/grpaug20251.jpg" onerror="this.src='img/people/group.svg'" alt="Greenfield Group photo">
+          <img src="img/people/grpaug20251w.jpg" onerror="this.src='img/people/group.svg'" alt="Greenfield Group photo">
         </div>
-        <figcaption class="muted">Replace with your real group photo at <code>img/people/group.jpg</code> (or .png).</figcaption>
       </figure>
 
       <div class="cards">
