update of profiles etc4

--- a/publications.html
+++ b/publications.html
@@ -46,6 +46,9 @@
 <div class="container" style="text-align:center; margin: 24px 0;">
   <a href="#top" class="btn btn-gray">Back to top</a>
 </div>
+<script src="publications.js?v=4" defer
+        onerror="document.getElementById('pubList').innerHTML='<p style=&quot;color:#b91c1c&quot;>Failed to load publications.js</p>'">
+</script>
 
   <footer>
     <div class="container" style="display:flex;justify-content:space-between;gap:16px;flex-wrap:wrap">
