update of profiles etc4

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Greenfield Group — University of St Andrews</title>
   <link rel="stylesheet" href="styles.css">
+  <script>
+  // Always force light mode unless user toggles manually
+  document.documentElement.setAttribute("data-theme", "light");
+</script>
+
 </head>
 <body>
   
