update of profiles etc4

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
   <script src="nav.js"></script>
   <script src="banner.js"></script>
-  <script src="news_data.js"></script>
+  <script src="news_data.js?v=2"></script>
   <script src="news.js"></script>
 </body>
 </html>
