--- a/news.html
+++ b/news.html
@@ -29,7 +29,7 @@
   </script>
   <script src="nav.js"></script>
   <script src="banner.js"></script>
-  <script src="news_data.js"></script>
+  <script src="news_data.js?v=2"></script>
   <script src="news.js"></script>
 </body>
 </html>
