update of profiles etc4

--- a/index.html
+++ b/index.html
@@ -107,6 +107,14 @@
   <h3>Deepu George</h3>
   <p class="muted">PhD Student</p>
 </article>
+      <article class="card text-center">
+  <div class="avatar-wrap">
+    <div class="avatar"><img src="img/people/headshots/sana-mendiratta.jpg" onerror="this.src='img/people/headshots/placeholder.svg'" alt="Headshot of Sana Mendiratta"></div>
+  </div>
+  <h3>Sana Mendiratta</h3>
+  <p class="muted">PhD Student</p>
+</article>
+
     </div>
     <p style="margin-top:10px"><a href="people.html">Find out more about the team →</a></p>
   </div>
