--- a/people.html
+++ b/people.html
@@ -130,6 +130,38 @@
           <p><a href="mailto:Deepu.George@uni-wuerzburg.de">Deepu.George@uni-wuerzburg.de </a></p>
           <a class="btn btn-gray" href="profile.html?person=deepu-george">View more</a>
         </article>
+
+        <!-- Sana -->
+        <article class="card text-center">
+          <div class="avatar-wrap">
+            <div class="avatar">
+              <img src="img/people/headshots/sana-mendiratta.jpg"
+                   onerror="this.src='img/people/headshots/placeholder.svg'"
+                   alt="Headshot of Sana Mendiratta">
+            </div>
+            <div class="flag-badge"><img src="img/flags/in.svg" alt="in flag"></div>
+          </div>
+          <h3>Sana Mendiratta</h3>
+          <p class="muted">PhD Student</p>
+           <div class="chip-row">
+            <a class="chip-link" href="https://orcid.org" target="_blank" rel="noopener">
+              <img src="img/icons/orcid.png" alt=""> ORCID
+            </a>
+            <a class="chip-link" href="https://scholar.google.com/citations?user=QIYTK-oAAAAJ&hl=en" target="_blank" rel="noopener">
+              <img src="img/icons/scholar.png" alt=""> Google Scholar
+            </a>
+          </div>
+          <div class="meta-block">
+            <h4 style="margin:10px 0 6px 0;font-size:14px">Education</h4>
+            <ul class="edu-list">
+              <li>Shiv Nadar Institute of Eminence (BS, 2024)</li>
+              <li>Imperial College London (MRes, 2025)</li>
+            </ul>
+          </div>
+          <p><a href="mailto:TBD@uni-wuerzburg.de">TBD </a></p>
+          <a class="btn btn-gray" href="profile.html?person=sana-mendiratta">View more</a>
+        </article>
+
       </div>
 
       <p style="margin:6px 0 20px">
