update of profiles etc4

--- a/people.html
+++ b/people.html
@@ -154,7 +154,7 @@
           <div class="meta-block">
             <h4 style="margin:10px 0 6px 0;font-size:14px">Education</h4>
             <ul class="edu-list">
-              <li>Shiv Nadar Institute of Eminence (BS, 2024)</li>
+              <li>Shiv Nadar IoE (BS, 2024)</li>
               <li>Imperial College London (MRes, 2025)</li>
             </ul>
           </div>
