update of profiles etc4

--- a/people.html
+++ b/people.html
@@ -65,7 +65,7 @@
               <li>University of Cambridge (PhD, 2020)</li>
             </ul>
           </div>
-          <p><a href="mailto:Jake.Greenfield@uni-wuerzburg.de">Jake.Greenfield@uni-wuerzburg.de</a></p>
+          <p><a href="mailto:jlg28@st-andrews.ac.uk">JLG28@St-Andrews.ac.uk</a></p>
           <a class="btn btn-gray" href="profile.html?person=jake-greenfield">View more</a>
         </article>
 
