--- a/contact.html
+++ b/contact.html
@@ -20,12 +20,12 @@
         <div class="card">
           <h3>Email</h3>
           <p>Feel free to contact me by email. Note that mass mailings will not be acknowledged. If you are interested in joining our team, please carefully read the <a href="join.html">Join us</a> page fully.</p>
-          <p><a href="mailto:Jake.Greenfield@uni-wuerzburg.de">Jake.Greenfield@uni-wuerzburg.de</a></p>
+          <p><a href="mailto:jlg28@st-andrews.ac.uk">JLG28@At-Andrews.ac.uk</a></p>
         </div>
         <div class="card">
-          <h3>🇩🇪 Current Address 🇩🇪</h3>
+          <h3>🇩🇪 Previous Address 🇩🇪</h3>
           <p>Institute for Organic Chemsitry, University of Würzburg, Am Hubland, Würzburg, 97074, Germany</p>
-          <h3>🇬🇧 Address (from Oct 2025) 🇬🇧</h3>
+          <h3>🇬🇧 Address (as of Oct 2025) 🇬🇧</h3>
           <p>School of Chemistry, University of St Andrews, North Haugh, St Andrews, KY16 9ST, UK</p>
         </div>
         <div class="card">
