update of profiles etc4

--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
         <div class="card">
           <h3>Email</h3>
           <p>Feel free to contact me by email. Note that mass mailings will not be acknowledged. If you are interested in joining our team, please carefully read the <a href="join.html">Join us</a> page fully.</p>
-          <p><a href="mailto:jlg28@st-andrews.ac.uk">JLG28@At-Andrews.ac.uk</a></p>
+          <p><a href="mailto:jlg28@st-andrews.ac.uk">JLG28@St-Andrews.ac.uk</a></p>
         </div>
         <div class="card">
           <h3>🇩🇪 Previous Address 🇩🇪</h3>
