update of profiles etc4

--- a/join.html
+++ b/join.html
@@ -20,7 +20,7 @@
 
       <h2>Postdoctoral Positions</h2>
       <p>Funding for specific projects, when available, will be advertised on the website. Exceptionally qualified applicants are invited to get in touch at any time. Include a CV and cover letter mentioning fellowship funding agencies you might apply to. Please also state the names of two or three referees who would be willing to provide a recommendation letter on your behalf.</p>
-      <p>It is possible to host scholars funded by the <a href="https://www.humboldt-foundation.de">Alexander von Humboldt foundation</a> in our group.</p>
+      <p>It is possible to host scholars funded by the <a href="https://www.humboldt-foundation.de">Alexander von Humboldt foundation (i.e., Feodor Lynen Fellows)</a> in our group.</p>
 
       <h2>PhD Positions</h2>
       <p>PhD positions are available each year. Get in touch as early as possible. An application should consist of your CV, a cover letter, and the names of two referees who will be able to provide a recommendation letter. You may wish to provide an outline as to how you believe you can contribute to the group and the area of our work that interests you the most.</p>
